# Handle

./: .clangd  .gitmodules  CMakeLists.txt  Handle.code-workspace  N32G430G8.ld  README.md  startup_n32g430_gnu.s
.github/workflows/: release.yml
ThreadSafe/: newlib_lock_glue.c  stm32_lock.h
include/: FreeRTOSConfig.h  SEGGER_RTT_Conf.h  SEGGER_SYSVIEW_Conf.h  adc_manager.h  buttons.h  buzzer.h  cpu_temp_sensor.h  crc16.h  debug.h  exti_pb7.h  fal_cfg.h  fdb_cfg.h  flash_config.h  flash_storage.h  freertos_tasks_c_additions.h  gpio.h  iwdg.h  keys.h  mbconfig.h  modbus.h  ntc_sensor.h  pb0_sensor.h  project_config.h  sfud_cfg.h  sysview_events.h  temp.h  ws2812_led.h  ws2812e_dma.h
lib/CMSIS/device/: system_n32g430.c
lib/n32g430_std_periph_driver/inc/: n32g430_iwdg.h
src/: SEGGER_SYSVIEW_Config_FreeRTOS.c  adc_manager.c  buttons.c  buzzer.c  cpu_temp_sensor.c  crc16.c  debug.c  exti_pb7.c  flash_config.c  flash_storage.c  freertos.c  gpio.c  iwdg.c  main.c  modbus.c  ntc_sensor.c  pb0_sensor.c  syscalls.c  temp.c  ws2812_led.c  ws2812e_dma.c
src/fal_port/: fal_flash_sfud_port.c
src/mb_port/: port.h  portevent.c  portother.c  portserial.c  porttimer.c
src/sfud_port/: drv_spi_flash.c  sfud_port.c
